# Task32_2

./: CMakeLists.txt
Task32_2/: CMakeLists.txt  Task32_2.cpp  film.JSON
